--- a/Webbshop/Views/Shared/_Layout.cshtml
+++ b/Webbshop/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Produkt" asp-action="Index">Produkter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bestal" asp-action="Index">Bestälningar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Bestälningar</a>
                         </li>
                     </ul>
                 </div>
