--- a/Webbshop/Views/Order/Index.cshtml
+++ b/Webbshop/Views/Order/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using MVCExampleProjekt.Models
-@*
+﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 
 *@
@@ -21,6 +20,7 @@
                 <td>orderStatus:</td>
                 <td>orderDate:</td>
                 <td>purchasinglist:</td>
+                <td></td>
                 <td></td>
             </tr>
 
@@ -55,6 +55,9 @@
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "redigeraOrder", "Order", new {id = @O.id})
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit - Admin", "AdminRedigeraOrder", "Order", new {id = @O.id})
                     </td>
                 </tr>
 
