fixed alot of stuff, redigeraOrder still doesnt work

--- a/Webbshop/Views/Order/Index.cshtml
+++ b/Webbshop/Views/Order/Index.cshtml
@@ -10,7 +10,7 @@
     }
 </style>
 @model List<Order>
-<a class="nav-link" asp-area="" asp-controller="Kund" asp-action="newKund">läg till Produkt</a>
+<a class="nav-link" asp-area="" asp-controller="Order" asp-action="newOrder">läg till Order</a>
 <div id="kundList">
     @{
         <table>
