--- a/Webbshop/Views/Order/AdminRedigeraOrder.cshtml
+++ b/Webbshop/Views/Order/AdminRedigeraOrder.cshtml
@@ -4,9 +4,81 @@
 *@
 
 <style>
-    td {
-        border: solid 1px black;
-        padding: 10px;
+    body {
+        background-image: url("../../images/Pyramid-scheme.png");
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    label {
+        width: 180px;
+        border: solid 1px;
+    }
+
+    #in {
+    }
+
+    h2 {
+        text-align: center;
+    }
+
+    .field {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        font-size: 1.1rem;
+    }
+
+    .wrapper {
+        position: relative;
+    }
+
+    span {
+        position: absolute;
+        top: 6px;
+        right: 10px;
+    }
+
+    input {
+        background-color: rgba(14, 78, 72, 0.6);
+        border: 1px solid rgba(0, 0, 0, 0.3);
+        border-radius: 4px;
+        padding: 4px;
+        outline: none;
+        color: wheat;
+        font-size: 1.1rem;
+        position: relative;
+        margin-top: 4px;
+    }
+
+    .Price::after {
+        content: "| KG";
+        position: absolute;
+        right: 3px;
+        top: 2px;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+    button[type=submit] {
+
     }
 </style>
 @model Order
@@ -18,16 +90,21 @@
         </div>
         <input type="hidden" name="id" value="@Model.id">
         <div id="in">
-            <label for="Name">Customer:</label>
-            <input type="text" id="Customer" name="Customer" value="@Model.id" placeholder="Product name">
-        </div>
-        <div id="in">   
-            <label for="Supplier">Supplier:</label>
-            <input type="text" id="Supplier" name="tillverkare" value="@Model.orderStatus" placeholder="Product Supplier">
+            <label for="customer">Customer id:</label>
+            <input type="number" id="customer" name="customer" value="@Model.customer" required placeholder="Customer ID: @Model.customer.id / DOES NOT WORK">
         </div>
         <div id="in">
-        <label for="Info">Info:</label>
-            <input type="Info" id="Info" name="produktinfo" value="@Model.orderDate" placeholder="Product information">
+            <label for="orderStatus">Orderstatus:</label>
+            <input type="text" id="orderStatus" name="orderStatus" value="@Model.orderStatus" required placeholder="orderStatus">
+        </div>
+        <div id="in">
+            <label for="orderDate">Date of order:</label>
+            <input type="datetime" id="orderDate" name="orderDate" value="@Model.orderDate" required placeholder="orderDate">
+        </div>
+        <div id="in" style="margin-left: 50px;">
+            <label for="New">New product to basket:</label>
+            <input type="number" id="New" name="New" class="New" step="1" min="1" placeholder="Product id / DOES NOT WORK">
+            <button type="submit" value="Add">Add</button>
         </div>
         @foreach (Produkt P in Model.purchasinglist) {
             <ul id="in">
@@ -35,6 +112,6 @@
                
             </ul>
         }
-        <button type="submit">Confirm</button>
+        <button type="submit" value="Change">Confirm</button>
     </form>
 }
