--- a/Webbshop/Views/Order/AdminRedigeraOrder.cshtml
+++ b/Webbshop/Views/Order/AdminRedigeraOrder.cshtml
@@ -80,6 +80,10 @@
     button[type=submit] {
 
     }
+    td {
+        border: solid 1px black;
+        padding: 10px;
+    }
 </style>
 @model Order
 @{
