--- a/Webbshop/Views/Kund/redigeraKund.cshtml
+++ b/Webbshop/Views/Kund/redigeraKund.cshtml
@@ -35,8 +35,20 @@
             <input type="text" id="username" name="username" value="@Model.username">
         </div>
         <div id="in">
+            <label for="password">password:</label>
+            <input type="password" id="password" name="password" value="@Model.password">
+        </div>
+        <div id="in">
             <label for="mail">mail:</label>
             <input type="text" id="mail" name="mail" value="@Model.mail">
+        </div>
+        <div id="in">
+            <label for="phoneNr">phoneNr:</label>
+            <input type="tel" id="phoneNr" name="phoneNr" value="@Model.phoneNr">
+        </div>
+        <div id="in">
+            <label for="adress">adress:</label>
+            <input type="text" id="adress" name="adress" value="@Model.adress">
         </div>
         <div id="in">
             <label for="age">age:</label>
