--- a/Webbshop/Views/Home/Index.cshtml
+++ b/Webbshop/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@using Microsoft.AspNetCore.Http // Import the HttpContext class
+﻿@using Microsoft.AspNetCore.Http
 
 @{
+
+
     ViewData["Title"] = "Home Page";
 
     string name = "";
@@ -13,15 +15,15 @@
     }
 
     <div class="text-center">
-        @if (!string.IsNullOrEmpty(name))
+            @if (!string.IsNullOrEmpty(name))
         {
-            <h1 class="display-4">Welcome, @name!</h1>
-            <p>You are logged in as a @role.</p>
+                <h1 class="display-4">Welcome, @name!</h1>
+                <p>You are logged in as a @role.</p>
         }
         else
         {
-            <h1 class="display-4">Welcome!</h1>
-            <p>Please log in to access your account.</p>
+                <h1 class="display-4">Welcome!</h1>
+                <p>Please log in to access your account.</p>
         }
     </div>
 }
