--- a/Webbshop/Views/Kund/Index.cshtml
+++ b/Webbshop/Views/Kund/Index.cshtml
@@ -8,6 +8,7 @@
                 }
     </style>
 @model List<Kund>
+@ViewBag.Meddelande
 <a class="nav-link" asp-area="" asp-controller="Kund" asp-action="newKund">läg till kund</a>
 <div id="kundList">
     @{
