--- a/Webbshop/Views/Login/LoginPartial.cshtml
+++ b/Webbshop/Views/Login/LoginPartial.cshtml
@@ -12,20 +12,21 @@
         margin-top: 20px;
     }
 </style>
-
+@ViewBag.MeddelandeMail
 <div class="container">
     <h1>Login</h1>
-    <hr />
+    <hr/>
     <div class="row">
         <div class="col-md-6">
-            <form method="post">
+            <form asp-action="Login" method="post">
                 <div class="form-group">
-                    <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" name="email" required />
+                    <label for="mailadress">Email address</label>
+                    <input type="mailadress" class="form-control" id="mailadress" name="mailadress" />
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required />
+                    <input type="password" class="form-control" id="password" name="password"/>
+                    @ViewBag.MeddelandePass
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
