--- a/Webbshop/Views/Shared/_Layout.cshtml
+++ b/Webbshop/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Webbshop.styles.css" asp-append-version="true" />
+    <style>
+        nav{
+            background-color:black;
+            color:yellow;
+        }
+    </style>
 </head>
 <body>
     <header>
