--- a/Webbshop/wwwroot/css/site.css
+++ b/Webbshop/wwwroot/css/site.css
@@ -1,20 +1,29 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
     margin-bottom: 60px;
-    background-color: black;
-    color: yellow;
+}
+
+.tabcontainer {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+}
+
+.tabell {
+    padding: 8px 15px;
+    background-color: lightblue;
+    border: 1px solid darkblue;
 }
